--- a/css/buttons.css
+++ b/css/buttons.css
@@ -57,11 +57,11 @@ input[type="button"].btn-xl, button.btn-xl { *height: 42px; *line-height: 42px; 
 
 input[type="button"].btn-lg, button.btn-lg { *height: 36px; *line-height: 36px; *padding: 0 25px; }
 
-.btn-sm { height: 24px; line-height: 24px; padding: 0 14px; font-size: 12px; font-family: "Arial", "PingFang SC", "SimSun", serif; *font-family: "SimSun", serif; }
+.btn-sm { height: 24px; line-height: 24px; padding: 0 14px; font-size: 12px; font-family: "Arial", "PingFang SC", "SimSun", sans-serif; *font-family: "SimSun", sans-serif; }
 
 input[type="button"].btn-sm, button.btn-sm { *height: 26px; *line-height: 26px; *padding: 0 15px; }
 
-.btn-xs { height: 20px; line-height: 20px; padding: 0 9px; font-size: 12px; font-family: "Arial", "PingFang SC", "SimSun", serif; *font-family: "SimSun", serif; }
+.btn-xs { height: 20px; line-height: 20px; padding: 0 9px; font-size: 12px; font-family: "Arial", "PingFang SC", "SimSun", sans-serif; *font-family: "SimSun", sans-serif; }
 
 input[type="button"].btn-xs, button.btn-xs { *height: 22px; *line-height: 22px; *padding: 0 10px; }
 
