--- a/docs/css/validate.css
+++ b/docs/css/validate.css
@@ -7,6 +7,10 @@ input { *position: relative; *top: -3px; }
     padding: 6px 10px 6px 19px;
 }
 
+.success_text{
+    vertical-align: top;
+}
+
 .red { color: #f00; }
 
 .input { height: 20px; line-height: 20px; padding: 4px; width: 160px; color: #333; background-color: #ffffff; border: 1px solid #ccc; -webkit-box-shadow: inset 1px 1px 2px rgba(0, 0, 0, 0.075); box-shadow: inset 1px 1px 2px rgba(0, 0, 0, 0.075); outline: none; }
