--- a/css/calendar.css
+++ b/css/calendar.css
@@ -25,7 +25,7 @@
 
 .ui-calendar .month-loading { left: 0; top: 0; right: 0; bottom: 0; background: #fff url(http://pic.lvmama.com/img/new_v/ui_scrollLoading/loadingGIF46px.gif) no-repeat center center; position: absolute; overflow: hidden; font-size: 200px; line-height: 100%; text-align: center; display: none; }
 
-.ui-calendar table { position: relative; font-family: "Arial", "PingFang SC", "SimSun", sans-serif; *font-family: "SimSun", sans-serif; }
+.ui-calendar table { position: relative; font-family: "Arial", "PingFang SC", "Microsoft Yahei", "SimSun", sans-serif; }
 
 .ui-calendar thead { background-color: #f5f5f5; }
 
@@ -267,7 +267,7 @@
 
 .ui-calendar-birthday .cal-month-dropdown { width: 49px; }
 
-.ui-calendar-birthday .cal-pane { text-align: right; height: 30px; margin: 5px 3px 0 0; color: #666666; font-family: "Arial", "PingFang SC", "SimSun", serif; }
+.ui-calendar-birthday .cal-pane { text-align: right; height: 30px; margin: 5px 3px 0 0; color: #666666; font-family: "Arial", "PingFang SC", "Microsoft Yahei", "SimSun", sans-serif; }
 
 .ui-calendar-birthday .cal-time-input { width: 48px; height: 20px; display: inline-block; border: 1px solid #cccccc; color: #333333; text-align: center; }
 
@@ -297,7 +297,7 @@
 
 .ui-calendar-birthday .cal-hour-dropdown li[data-disabled="true"], .ui-calendar-birthday .cal-minute-dropdown li[data-disabled="true"] { cursor: default; color: #999; background-color: transparent; }
 
-.ui-calendar-birthday .cal-hour-dropdown .title, .ui-calendar-birthday .cal-minute-dropdown .title { font-family: "Arial", "PingFang SC", "SimSun", serif; width: 123px; height: 24px; line-height: 24px; color: #666666; padding-left: 10px; }
+.ui-calendar-birthday .cal-hour-dropdown .title, .ui-calendar-birthday .cal-minute-dropdown .title { font-family: "Arial", "PingFang SC", "Microsoft Yahei", "SimSun", sans-serif; width: 123px; height: 24px; line-height: 24px; color: #666666; padding-left: 10px; }
 
 .ui-calendar-birthday .cal-hour-dropdown .close, .ui-calendar-birthday .cal-minute-dropdown .close { cursor: pointer; top: 2px; right: 4px; position: absolute; padding: 5px; }
 
@@ -384,7 +384,7 @@
 .ui-calendar-groupon[data-float][data-bimonthly] [data-offset="0"] .caltitle { width: 566px; }
 
 /*endregion*/
-.calhover { -webkit-box-shadow: 2px 2px 2px 0 rgba(0, 0, 0, 0.1); -moz-box-shadow: 2px 2px 2px 0 rgba(0, 0, 0, 0.1); box-shadow: 2px 2px 2px 0 rgba(0, 0, 0, 0.1); font-family: "Arial", "PingFang SC", "SimSun", sans-serif; *font-family: "SimSun", sans-serif; display: none; color: #666666; border: 1px solid #cccccc; background: #FFFFFF; position: absolute; padding: 10px 10px 4px 10px; *margin-left: -1px; *margin-top: -1px; }
+.calhover { -webkit-box-shadow: 2px 2px 2px 0 rgba(0, 0, 0, 0.1); -moz-box-shadow: 2px 2px 2px 0 rgba(0, 0, 0, 0.1); box-shadow: 2px 2px 2px 0 rgba(0, 0, 0, 0.1); font-family: "Arial", "PingFang SC", "Microsoft Yahei", "SimSun", sans-serif; display: none; color: #666666; border: 1px solid #cccccc; background: #FFFFFF; position: absolute; padding: 10px 10px 4px 10px; *margin-left: -1px; *margin-top: -1px; }
 
 .calhover .triangle { width: 11px; height: 7px; display: block; position: absolute; margin: 0; top: -7px; left: 36px; bottom: auto; background: url(http://pic.lvmama.com/img/lv/calendar.png) no-repeat -140px 0; pointer-events: none; border: none; }
 
@@ -404,6 +404,6 @@
 
 .calhover .calsale i { text-indent: -9999em; background-image: url(http://pic.lvmama.com/img/lv/calendar.png); background-position: -120px 0; }
 
-.cal-number-of-days { -webkit-box-shadow: 2px 2px 2px 0 rgba(0, 0, 0, 0.1); -moz-box-shadow: 2px 2px 2px 0 rgba(0, 0, 0, 0.1); box-shadow: 2px 2px 2px 0 rgba(0, 0, 0, 0.1); display: none; *font-family: SimSun, sans-serif; pointer-events: none; position: absolute; background: #ffffff; border: 1px solid #cccccc; line-height: 20px; padding: 5px 10px; }
+.cal-number-of-days { -webkit-box-shadow: 2px 2px 2px 0 rgba(0, 0, 0, 0.1); -moz-box-shadow: 2px 2px 2px 0 rgba(0, 0, 0, 0.1); box-shadow: 2px 2px 2px 0 rgba(0, 0, 0, 0.1); display: none; font-family: "Arial", "PingFang SC", "Microsoft Yahei", "SimSun", sans-serif; pointer-events: none; position: absolute; background: #ffffff; border: 1px solid #cccccc; line-height: 20px; padding: 5px 10px; }
 
 .cal-number-of-days .triangle { width: 11px; height: 7px; display: block; position: absolute; top: -7px; left: 50%; margin-left: -5px; background: url(http://pic.lvmama.com/img/lv/calendar.png) no-repeat -140px 0; pointer-events: none; }
