--- a/scss/calendar.scss
+++ b/scss/calendar.scss
@@ -84,7 +84,7 @@
     @include sans-serif;
   }
   thead {
-    background-color: #f5f5f5;
+    background-color: #eee;
   }
   th, td {
     border: 1px solid #e3e3e3;
@@ -217,11 +217,16 @@
   table {
     margin: -1px;
   }
-
+  .caldisabled {
+    color: #999;
+  }
+  .caldisabled:hover {
+    background-color: transparent;
+  }
   .caldate:hover {
     &.caldisabled {
-      background: none;
-      margin: 0;
+      /*background: none;*/
+      /*margin: 0;*/
       cursor: default;
     }
   }
@@ -333,7 +338,7 @@
       width: 79px;
     }
     .notThisMonth {
-      background-color: #fbfbfb;
+      background-color: #f8f8f8;
     }
     .caldate:hover {
       width: 79px;
@@ -342,7 +347,7 @@
       background-color: #fffaee;
     }
     .notThisMonth.caldisabled:hover {
-      background-color: #fbfbfb;
+      background-color: #f8f8f8;
     }
     .calmonth[data-offset='0'] {
       width: 561px;
@@ -383,14 +388,17 @@
   }
   .caldate.nodate {
     cursor: default;
-    background-color: transparent;
   }
   .festival {
     .calday {
       color: #ee3388;
     }
   }
-
+  .calmiddle {
+    margin: -1px;
+    border: 1px solid #ff9900;
+    background-color: #fffaee;
+  }
 }
 
 /*endregion */
@@ -452,7 +460,7 @@
     position: relative;
   }
   thead {
-    background-color: #f6f6f6;
+    background-color: #eee;
   }
   th {
     text-align: center;
@@ -1059,6 +1067,9 @@
       background-image: $img;
       background-position: -120px 0;
     }
+  }
+  .calHasNotProduct {
+    margin: -3px 0 3px 0;
   }
 }
 
