--- a/docs/css/docs.css
+++ b/docs/css/docs.css
@@ -14,18 +14,48 @@ body {
 }
 
 code {
-    font-size: 16px;
-    font-family: Monaco, Consolas, DengXian, monospace;
+    font-size: 14px;
+    font-family: Monaco, Consolas, "Microsoft Yahei", monospace;
+    padding: 5px;
+    border-radius: 4px;
+}
+
+pre code {
+    position: relative;
+    border: 1px solid #eee;
+}
+
+pre code::before {
+    background-color: #fff;
+    font-family: "Arial", "PingFang SC", "Microsoft Yahei", "SimSun", sans-serif;
+    position: absolute;
+    top: -1px;
+    left: -1px;
+    font-size: 8px;
+    color: #666;
+    border: 1px solid #eee;
+    border-radius: 0 0 4px 0;
+    padding: 0 1ex;
+}
+
+pre code.html::before {
+    content: "html5";
+}
+
+pre code.js::before {
+    content: "javascript";
+}
+
+pre code.css::before {
+    content: "css3";
 }
 
 code.hljs {
-    font-size: 18px;
-    background: #32332b;
 }
 
 code::selection,
 code span::selection {
-    background: #CCC;
+    background-color: #CCC;
 }
 
 .hljs-comment::selection {
@@ -114,6 +144,15 @@ a[target=_blank]:hover:after {
 #everything .section {
     margin-top: 10px;
     margin-bottom: 20px;
+    font-size: 14px;
+    border: 1px solid #eee;
+    border-radius: 8px;
+    padding: 10px;
+}
+
+section p,
+.section p {
+    margin: 5px 0;
 }
 
 .label {
@@ -216,6 +255,7 @@ a[target=_blank]:hover:after {
 }
 
 .navigation {
+    z-index: 1;
     position: fixed;
     top: 190px;
     right: 50px;
