--- a/scss/icons.scss
+++ b/scss/icons.scss
@@ -20,6 +20,7 @@
 .nova-icon-outline-xs {
   display: inline-block;
   background-image: url(http://pic.lvmama.com/img/lv/icon.png);
+  //background-image: url(../../../img/lv/icon.png);
   vertical-align: middle;
 }
 
