--- a/scss/calendar.scss
+++ b/scss/calendar.scss
@@ -1097,3 +1097,25 @@
     pointer-events: none;
   }
 }
+
+.nova-calendar-tip {
+
+  background: #fff;
+  font-size: 12px;
+  color: #666;
+  line-height: 32px;
+  height: 33px;
+  padding-left: 10px;
+  border-color: #dcdcdc;
+  border-style: solid;
+  border-width: 0px 2px 0 2px;
+}
+
+.nova-calendar-tip i {
+  display: inline-block;
+  width: 14px;
+  height: 14px;
+  margin-right: 5px;
+  background: url(http://pic.lvmama.com/img/flight/flight.png) -50px -20px;
+  vertical-align: -3px;
+}
