--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -13,7 +13,7 @@ $btn-colorful-color: #FFFFFF;
 
 $btn-color: #666666;
 $btn-border: #DDDDDD;
-$btn-border-disabled: #EEEEEE;
+$btn-border-disabled: #e5e5e5;
 
 $btn-pink-bg: #EE3388;
 $btn-pink-bg-hover: #DD3377;
