--- a/css/calendar.css
+++ b/css/calendar.css
@@ -422,6 +422,6 @@
 
 .cal-number-of-days .triangle { width: 11px; height: 7px; display: block; position: absolute; top: -7px; left: 50%; margin-left: -5px; background: url(http://pic.lvmama.com/img/lv/calendar.png) no-repeat -140px 0; pointer-events: none; }
 
-.nova-calendar-tip { background: #fff; font-size: 12px; color: #666; line-height: 32px; height: 33px; padding-left: 10px; border-color: #dcdcdc; border-style: solid; border-width: 0px 2px 0 2px; }
+.nova-calendar-tip { background: #fff; font-size: 12px; color: #666; line-height: 32px; height: 33px; padding-left: 10px; }
 
 .nova-calendar-tip i { display: inline-block; width: 14px; height: 14px; margin-right: 5px; background: url(http://pic.lvmama.com/img/flight/flight.png) -50px -20px; vertical-align: -3px; }
