--- a/css/dialog.css
+++ b/css/dialog.css
@@ -2,15 +2,19 @@
 
 .nova-dialog.nova-dialog-moving, .nova-dialog-static.nova-dialog-moving { cursor: move; }
 
+.nova-dialog-no-title { padding-top: 20px; }
+
 .nova-dialog-close { cursor: pointer; position: absolute; top: 0; right: 0; width: 35px; height: 35px; }
 
 .nova-dialog-close i { display: block; margin: 10px 0 0 9px; width: 16px; height: 15px; background-image: url(//pic.lvmama.com/img/lv/dialog.png); background-position: 0 0; }
 
 .nova-dialog-close:hover i { background-position: -20px 0; }
 
-.nova-dialog-header { height: 35px; line-height: 35px; font-size: 14px; padding: 0 10px; border-bottom: 1px solid #cccccc; }
+.nova-dialog-header { height: 35px; line-height: 35px; font-size: 14px; padding: 0 10px; border-bottom: 1px solid #e3e3e3; }
 
-.nova-dialog-body { padding: 30px 30px 25px 30px; line-height: 22px; }
+.nova-dialog-header small { font-size: 12px; color: #666666; margin-left: 10px; }
+
+.nova-dialog-body { padding: 25px 30px 20px 30px; line-height: 22px; }
 
 .nova-dialog-body iframe { width: 100%; height: 100%; }
 
