--- a/scss/dialog.scss
+++ b/scss/dialog.scss
@@ -15,6 +15,10 @@ $dialog-img: url(//pic.lvmama.com/img/lv/dialog.png);
   }
 }
 
+.nova-dialog-no-title{
+  padding-top: 20px;
+}
+
 .nova-dialog-close {
   cursor: pointer;
   position: absolute;
@@ -40,12 +44,17 @@ $dialog-img: url(//pic.lvmama.com/img/lv/dialog.png);
   line-height: 35px;
   font-size: 14px;
   padding: 0 10px;
-  border-bottom: 1px solid #cccccc;
+  border-bottom: 1px solid #e3e3e3;
   //margin-bottom: -15px;
+  small {
+    font-size: 12px;
+    color: #666666;
+    margin-left: 10px;
+  }
 }
 
 .nova-dialog-body {
-  padding: 30px 30px 25px 30px;
+  padding: 25px 30px 20px 30px;
   line-height: 22px;
   //margin-top: 15px;
   iframe {
