--- a/css/ui.css
+++ b/css/ui.css
@@ -59,3 +59,7 @@
 .nova-select-optgroup .nova-select-option { padding-left: 20px; }
 
 .nova-select-label { display: inline-block; }
+
+.nova-checkbox-hide { opacity: 0; filter: alpha(opacity=0); position: absolute; }
+
+.nova-radio-hide { opacity: 0; filter: alpha(opacity=0); position: absolute; }
