--- a/css/ui.css
+++ b/css/ui.css
@@ -2,39 +2,39 @@
 
 .nova-checkbox-label:hover .nova-checkbox { background-position: 0 -20px; }
 
-.nova-checkbox-label:hover .nova-checkbox.checked { background-position: 0 -40px; }
+.nova-checkbox-label:hover .nova-checkbox.nova-checked { background-position: 0 -40px; }
 
 .nova-checkbox-label:hover .nova-checkbox.disabled { background-position: 0 0; }
 
 .nova-checkbox { vertical-align: top; margin-top: 9px; margin-right: 5px; width: 13px; height: 13px; display: inline-block; background: url(http://pic.lvmama.com/img/lv/ui.png); background-position: 0 0; }
 
-.nova-checkbox.checked { background-position: 0 -40px; }
+.nova-checkbox.nova-checked { background-position: 0 -40px; }
 
 .nova-checkbox.disabled { background-position: 0 0; }
 
-.nova-checkbox-label-orange .nova-checkbox.checked { background-position: -20px -40px; }
+.nova-checkbox-label-orange .nova-checkbox.nova-checked { background-position: -20px -40px; }
 
 .nova-checkbox-label-orange:hover .nova-checkbox { background-position: -20px -20px; }
 
-.nova-checkbox-label-orange:hover .nova-checkbox.checked { background-position: -20px -40px; }
+.nova-checkbox-label-orange:hover .nova-checkbox.nova-checked { background-position: -20px -40px; }
 
 .nova-radio-label { margin-right: 10px; }
 
 .nova-radio-label:hover .nova-radio { background-position: 0 -80px; }
 
-.nova-radio-label:hover .nova-radio.checked { background-position: 0 -100px; }
+.nova-radio-label:hover .nova-radio.nova-checked { background-position: 0 -100px; }
 
 .nova-radio-label:hover .nova-radio.disabled { background-position: 0 -60px; }
 
 .nova-radio { vertical-align: top; margin-top: 9px; margin-right: 5px; width: 13px; height: 13px; display: inline-block; background: url(http://pic.lvmama.com/img/lv/ui.png); background-position: 0 -60px; }
 
-.nova-radio.checked { background-position: 0 -100px; }
+.nova-radio.nova-checked { background-position: 0 -100px; }
 
-.nova-radio-label-orange .nova-radio.checked { background-position: -20px -100px; }
+.nova-radio-label-orange .nova-radio.nova-checked { background-position: -20px -100px; }
 
 .nova-radio-label-orange:hover .nova-radio { background-position: -20px -80px; }
 
-.nova-radio-label-orange:hover .nova-radio.checked { background-position: -20px -100px; }
+.nova-radio-label-orange:hover .nova-radio.nova-checked { background-position: -20px -100px; }
 
 .nova-select { width: 188px; line-height: 28px; }
 
