--- a/scss/dialog.scss
+++ b/scss/dialog.scss
@@ -77,7 +77,7 @@ $dialog-img: url(//pic.lvmama.com/img/lv/dialog.png);
   left: 0;
   background-color: #000;
   opacity: 0.35;
-  filter: alpha(opacify = 35);
+  filter: alpha(opacity = 35);
 }
 
 .nova-dialog-body-loading {
