--- a/scss/calendar.scss
+++ b/scss/calendar.scss
@@ -520,10 +520,10 @@
     vertical-align: top;
   }
   .sat {
-    border-right: 2px solid #fff;
+    /*border-right: 2px solid #fff;*/
   }
   .sun {
-    border-left: 1px solid #fff;
+    /*border-left: 1px solid #fff;*/
   }
   .date {
     position: absolute;
