--- a/scss/dialog.scss
+++ b/scss/dialog.scss
@@ -6,7 +6,7 @@ $dialog-img: url(//pic.lvmama.com/img/lv/dialog.png);
   font-size: 12px;
   position: fixed;
   width: 420-2px;
-  border: 1px solid #cccccc;
+  //border: 1px solid #cccccc;
   background-color: #fff;
   color: #333333;
   box-shadow: 0 5px 14.25px 0.75px rgba(6, 0, 1, 0.15);
