--- a/css/ui.css
+++ b/css/ui.css
@@ -1,5 +1,7 @@
 .nova-checkbox-label { margin-right: 10px; }
 
+.nova-checkbox-label.disabled { color: #999; }
+
 .nova-checkbox-label:hover .nova-checkbox { background-position: 0 -20px; }
 
 .nova-checkbox-label:hover .nova-checkbox.nova-checked { background-position: 0 -40px; }
@@ -19,6 +21,8 @@
 .nova-checkbox-label-orange:hover .nova-checkbox.nova-checked { background-position: -20px -40px; }
 
 .nova-radio-label { margin-right: 10px; }
+
+.nova-radio-label.disabled { color: #999; }
 
 .nova-radio-label:hover .nova-radio { background-position: 0 -80px; }
 
@@ -63,3 +67,23 @@
 .nova-checkbox-hide { opacity: 0; filter: alpha(opacity=0); position: absolute; }
 
 .nova-radio-hide { opacity: 0; filter: alpha(opacity=0); position: absolute; }
+
+.nova-number-box { vertical-align: top; display: inline-block; font-size: 0; }
+
+.nova-number-box input { font-size: 13px; text-align: center; float: left; border: 1px solid #cccccc; width: 39px; height: 28px; line-height: 28px; margin-left: -1px; }
+
+.nova-number-box input:focus { outline: none; }
+
+.nova-number-box-subtract, .nova-number-box-add { cursor: pointer; float: left; border: 1px solid #cccccc; width: 28px; height: 28px; }
+
+.nova-number-box-subtract i, .nova-number-box-add i { background-image: url(http://pic.lvmama.com/img/lv/ui.png); width: 12px; height: 12px; display: block; margin: 8px; }
+
+.nova-number-box-subtract i { background-position: -40px 0; }
+
+.nova-number-box-subtract.disabled i { background-position: -40px -20px; }
+
+.nova-number-box-add { margin-left: -1px; }
+
+.nova-number-box-add i { background-position: -40px -40px; }
+
+.nova-number-box-add.disabled i { background-position: -40px -60px; }
