--- a/scss/ui.scss
+++ b/scss/ui.scss
@@ -132,6 +132,7 @@ $ui-bg: url(http://pic.lvmama.com/img/lv/ui.png);
   overflow: auto;
   position: absolute;
   display: none;
+  z-index: 1;
 }
 
 .nova-select-optgroup-label {
@@ -228,5 +229,47 @@ $ui-bg: url(http://pic.lvmama.com/img/lv/ui.png);
     i {
       background-position: -40px -60px;
     }
+  }
+}
+
+.nova-checkbox-label-bordered {
+  position: relative;
+  line-height: 23px;
+  height: 23px;
+  border: 1px solid #dddddd;
+  padding: 1px 15px;
+  font-size: 12px;
+  display: inline-block;
+  color: #666;
+  &:hover,
+  &.nova-checked {
+    color: #333;
+    padding: 0 14px;
+    border: 2px solid #ff8800;
+  }
+
+  .nova-checkbox {
+    position: absolute;
+    bottom: -2px;
+    right: -2px;
+    margin: 0;
+    display: none;
+    &.nova-checked {
+      display: block;
+      background-image: $ui-bg;
+      background-position: -40px -80px;
+      width: 20px;
+      height: 20px;
+    }
+  }
+  &:hover .nova-checkbox.nova-checked {
+    background-position: -40px -80px;
+  }
+  .nova-checkbox-text {
+    display: inline-block;
+  }
+  .nova-checkbox-hide {
+    top: 0;
+    left: 0;
   }
 }
